Ordne Sidebar auf kleineren Screens unter dem Content an & experimentiere mit Meta-Menü

--- a/src/sass/plugins/_rrze-search.scss
+++ b/src/sass/plugins/_rrze-search.scss
@@ -56,7 +56,7 @@
 
 .meta-search .searchform .search-settings label {
 
-    @media (max-width: $screen-sm - 1) {
+    @media (max-width: $screen-sm) {
         white-space: normal;
 
         a {
