--- a/src/sass/plugins/_rrze-calendar.scss
+++ b/src/sass/plugins/_rrze-calendar.scss
@@ -22,12 +22,12 @@
 	padding: 0;
 	text-align: left;
 	margin-bottom: 5px;
-	
+
 	a {
 		@include inline-block;
 		margin-left: 0px;
 	}
-	
+
 	.events-more {
 		color: var(--color-primary-basis-kontrast);
 		background: var(--color-primary-basis);
@@ -35,7 +35,7 @@
 		text-decoration: none;
 		@include border-radius(3px);
 		@include px2rem($font-size-textbuttons);
-		
+
 		&:hover, &:focus {
 			background: var(--color-primary-dunkler);
 			text-decoration: none;
@@ -47,11 +47,11 @@
 /* Event-Listen in der Sidebar oder in Shortcodes */
 .events-list {
 	padding-bottom: 10px;
-	
+
 	.events-more-links a {
 	    margin-left: 60px;
 	}
-	
+
 }
 
 
@@ -64,7 +64,7 @@
 			@include no-list;
 			padding: 10px 0 0 0;
 			min-height: 42px;
-			@include px2rem($font-size-sidebar-events);	
+			@include px2rem($font-size-sidebar-events);
 			background-image: none;
 		}
 	}
@@ -80,14 +80,14 @@
 	text-align: center;
 }
 
-.event-date-month {	
-	@include px2rem($font-size-sidebar-events-month);	
+.event-date-month {
+	@include px2rem($font-size-sidebar-events-month);
 	text-transform: uppercase;
 	font-weight: bold;
 }
 
 .event-date-day {
-	@include px2rem($font-size-sidebar-events-day);	
+	@include px2rem($font-size-sidebar-events-day);
 	font-weight: bold;
 }
 
@@ -104,11 +104,11 @@
 .event-title {
 	font-weight: bold;
 	a {
-	    
+
 	}
 }
 
-.event-time, 
+.event-time,
 .event-location {
 	color: var(--color-primary-basis);
 }
@@ -122,7 +122,7 @@
 
 .event-category-fau .event-date {
 	background: var(--color-ZUV);
-    
+
 }
 .event-category-einrichtungen .event-date {
 	background: var(--color-Default);
@@ -150,7 +150,7 @@
 
 .widget_event_widget a {
 	text-decoration: none;
-	
+
 	&:hover, &:focus {
 		text-decoration: underline;
 	}
@@ -159,7 +159,7 @@
 .events-list {
 	ul {
 		@include no-list;
-		
+
 		li {
 			@include no-list;
 		}
@@ -170,24 +170,24 @@
 .event-detail-item {
 	margin-bottom: 20px;
 	min-height: 50px;
-	
+
 	.event-info {
 		margin-left: 70px;
 		font-size: 15px;
 		line-height: 20px;
 		padding-top: 6px;
 	}
-	
+
 	.event-date {
 		width: 50px;
 		padding: 7px 0;
 	}
-	
+
 	.event-date-month {
 		font-size: 14px;
 		line-height: 18px;
 	}
-	
+
 	.event-date-day {
 		font-size: 28px;
 		line-height: 28px;
@@ -197,7 +197,7 @@
 
 
 
-@media (max-width: $screen-sm - 1) {
+@media (max-width: $screen-sm) {
 	#content .widget_event_widget .event-info {
 		margin-left: 60px;
 	}
