--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -21,7 +21,7 @@
 
                 svg,
                 img {
-                    max-height: 80px;
+                    max-height: 60px;
                     max-width: 100%;
                     width: auto;
                 }
@@ -29,6 +29,16 @@
 
             a {
                 text-decoration: none;
+            }
+
+            @media (min-width: $screen-sm) {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            @media (min-width: $screen-md) {
+                flex-direction: row;
+                align-items: center;
             }
         }
 
@@ -118,7 +128,7 @@
         }
     }
 
-    @media (max-width: $screen-sm - 1) {
+    @media (max-width: $screen-sm) {
 
         .md-showsitelogo:not(.nologo) & .branding {
 
