--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -4,125 +4,131 @@
 
 
 blockquote {
-	padding: 0;
-	margin: 0;
-	border: none;
-	font-family: $fontStackSerifs;
-	font-style: italic;
-	position: relative;
-	
-	
-	@include px2rem($font-size-quotes);
-	
+    padding: 0;
+    margin: 0;
+    border: none;
+    font-family: $fontStackSerifs;
+    font-style: italic;
+    position: relative;
 
-	p { 
-		margin-bottom: 0;
-		font-family: $fontStackSerifs;
-		@include px2rem($font-size-quotes);
-		font-weight: 400;
-		font-style: italic;
-		letter-spacing: 1px;
-		
-		strong {
-		    font-weight: bolder; 
-		}
-	}
-	
-	#tinymce &,
-	#content & {
-		font-style: italic;
-		margin: 10px;
-		padding: 31px 20px 20px 20px;
-		min-height: 50px;
-		border-left: 10px solid var(--color-primary-ci-hell);
-		
-		background: var(--color-ContentRegions);
-		display: inline-block;
-		
-		
-		@media (min-width: $screen-sm) {
-		    margin: 10px 50px;
-		    padding: 31px 40px 20px 40px;
-		}
-		
-		p,h1,h2,h3,h4,h5,h6 {
-		    color: var(--color-Text);
-		}
-		
-		
-	}
+    @include px2rem($font-size-quotes);
 
-	#content .sidebar-inline & {
-	    margin: 10px;
-	    padding: 10px;
-	}
-	small,
-	cite { 
-	    display: block; 
-	    text-align: right;
-	    @include px2rem($font-size-quotes-cites);
-	    color: var(--color-Text);
-	    &:before { content: '\2014 \00A0'; }
+    p {
+        margin-bottom: 0;
+        font-family: $fontStackSerifs;
+        @include px2rem($font-size-quotes);
+        font-weight: 400;
+        font-style: italic;
+        letter-spacing: 1px;
 
-	}
-	cite {
-	    margin-top: 10px;
-	}
-	#content & img {
-	    box-shadow: none;
-	    border: none;
-	}
-	
-	&.pull-right {
-	    border-right: none;
-	    padding-right: 40px;
-	    padding-left: 15px;
-	    
-	}
-	
-	
-	#content .sidebar-inline &,
-	#tinymce  &.noquote,
-	#content  &.noquote {
-		    background: inherit;
-		    padding-left: 0;
-		    padding-right: 0;
-		    border: none;
-		    &::after, 
-		    &::before {
-			content: "";
-		    }
-		   
-		}
-		
-	#content .sidebar-inline & {
-	    
-	    @include px2rem($font-size-sidebar);  
-	    p {
-		@include px2rem($font-size-sidebar);  
-	    }
-	}	
-		
+        strong {
+            font-weight: bolder;
+        }
+    }
+
+    #tinymce &,
+    #content & {
+        max-width: calc(100% - 40px);
+        width: 100%;
+        font-style: italic;
+        margin: 10px;
+        padding: 31px 20px 20px 20px;
+        min-height: 50px;
+        border-left: 10px solid var(--color-primary-ci-hell);
+        background: var(--color-ContentRegions);
+        display: inline-block;
+        overflow: hidden;
+
+        @media (min-width: $screen-sm) {
+            margin: 10px 50px;
+            padding: 31px 40px 20px 40px;
+            max-width: calc(100% - 80px);
+        }
+
+        p, h1, h2, h3, h4, h5, h6 {
+            color: var(--color-Text);
+        }
+    }
+
+    #content .sidebar-inline & {
+        margin: 10px;
+        padding: 10px;
+    }
+
+    small,
+    cite {
+        display: block;
+        text-align: right;
+        @include px2rem($font-size-quotes-cites);
+        color: var(--color-Text);
+
+        &:before {
+            content: '\2014 \00A0';
+        }
+
+    }
+
+    cite {
+        margin-top: 10px;
+    }
+
+    #content & img {
+        box-shadow: none;
+        border: none;
+    }
+
+    &.pull-right {
+        border-right: none;
+        padding-right: 40px;
+        padding-left: 15px;
+
+    }
+
+
+    #content .sidebar-inline &,
+    #tinymce &.noquote,
+    #content &.noquote {
+        background: inherit;
+        padding-left: 0;
+        padding-right: 0;
+        border: none;
+
+        &::after,
+        &::before {
+            content: "";
+        }
+
+    }
+
+    #content .sidebar-inline & {
+
+        @include px2rem($font-size-sidebar);
+
+        p {
+            @include px2rem($font-size-sidebar);
+        }
+    }
+
 }
 
 
 cite {
-    color: var(--color-Text); 
+    color: var(--color-Text);
     font-weight: normal;
     font-style: italic;
-    
+
     &.text {
-	color: inherit;
+        color: inherit;
     }
+
     #content .sidebar-inline & {
-	    @include px2rem($font-size-sidebar);  
-	    p {
-		@include px2rem($font-size-sidebar);  
-	    }
-	}
+        @include px2rem($font-size-sidebar);
+
+        p {
+            @include px2rem($font-size-sidebar);
+        }
+    }
 }
-
-
 
 
 // Abbrevations, Acronyms
@@ -132,12 +138,13 @@ acronym[data-original-title],
 abbr[title],
 abbr[data-original-title] {
     cursor: help;
-    text-decoration: none; 
+    text-decoration: none;
 }
+
 acronym.initialism,
 abbr.initialism {
-	font-size: 90%;
-	text-transform: uppercase;
+    font-size: 90%;
+    text-transform: uppercase;
 }
 
 
