--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -33,7 +33,8 @@
         width: $container-lg;
     }
     @media (min-width: $screen-xl-min) {
-        width: $container-xl;
+        max-width: $container-xl;
+        width: 100%;
     }
 }
 
@@ -41,6 +42,10 @@
 .content-row {
     display: flex;
     flex-wrap: wrap;
+
+    @media (min-width: $screen-xl-min) {
+        flex-wrap: nowrap;
+    }
 
     main {
         flex-grow: 1;
