Verbessere Darstellung der Sidebar und vereinfache Code

--- a/src/sass/plugins/_rrze-search.scss
+++ b/src/sass/plugins/_rrze-search.scss
@@ -73,6 +73,10 @@
     }
 }
 
+.wp-block-search__label {
+    margin-right: 0;
+}
+
 .sidebar-single .rrze_search {
     dialog {
         border: none;
