Verbessere Darstellung der Sidebar und vereinfache Code

--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -134,6 +134,10 @@
     display: flex;
     flex-wrap: wrap;
 
+    @media (min-width: $screen-md) {
+        flex-wrap: nowrap;
+    }
+
     .content-inline {
         order: 1;
         display: block;
