--- a/src/sass/structure/header/_header.scss
+++ b/src/sass/structure/header/_header.scss
@@ -17,6 +17,13 @@
 // Meta Region
 @import "metasearch";
 
-
 // Meta Orga Breadcrumb
 @import "orga-breadcrumb";
+
+header {
+    display: none;
+
+    @media (min-width: $screen-sm) {
+        display: block;
+    }
+}
